--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Set tag for master
         if: ${{ matrix.version == 'master' }}
-        run: echo "TAG=docker.io/mpepping/cyberchef:latest" >> $GITHUB_ENV
+        run: echo "TAG=docker.io/peterlewis/cyberchef:latest" >> $GITHUB_ENV
 
       - name: Set version for release
         if: ${{ matrix.version == 'release' }}
@@ -40,7 +40,7 @@ jobs:
 
       - name: Set tag for release
         if: ${{ matrix.version == 'release' }}
-        run: echo "TAG=docker.io/mpepping/cyberchef:${VERSION}" >> $GITHUB_ENV
+        run: echo "TAG=docker.io/peterlewis/cyberchef:${VERSION}" >> $GITHUB_ENV
 
       - name: Build and push
         timeout-minutes: 720
